[project]
name = "ehentai-to-vk-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.23.0",
    "aiohttp>=3.13.2",
    "aiosqlite>=0.22.1",
    "loguru>=0.7.3",
    "parsel>=1.10.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "tenacity>=9.1.2",
]
