[project]
name = "ehentai-to-vk-bot"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.23.0",
    "aiohttp>=3.13.2",
    "aiohttp-cors>=0.8.1",
    "aiosqlite>=0.22.1",
    "black>=25.12.0",
    "loguru>=0.7.3",
    "parsel>=1.10.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "tenacity>=9.1.2",
]
